_scss/main.scss
/*Main CSS file*/
/* Layout */
html, body {
  height: 100%;
}
.bk-site_wrapper {
  width: 87%;
  min-height: 100%;
  max-width: 800px;
  margin: 0 auto 0 auto;
  position: relative;
}
/* Site Defaults */
h1 {
  font-size: 200%;
  margin-bottom: 20px;
  margin-top: 10px;
}
h2 {
  font-size: 150%;
  margin-bottom: 10px;
}
h3 {
  font-size: 125%;
}
p {
  margin: 10px 0 10px 0;
}
a {
  &:link, &:visited {
    text-decoration: none;
  }
  &:hover, &:active, &:focus {
    text-decoration: underline;
  }
}
header.bk-main {
  text-align: center;
  nav {
    ul {
      width: 100%;
      li {
        display: inline-block;
        padding: 5px 10% 5px 10%;
      }
    }
  }
}
footer.bk-main {
  text-align: center;
  width: 100%;
  position: absolute;
  bottom: 10px;
  font-size: 65%;
}
/* Specific Pages */
/* Table of Contents */
.bk-toc {
  text-align: center;
  li {
    margin: 5px;
  }
}
.bk-chapter {
  h1 {
    text-align: center;
    margin-top: 30px;
    margin-bottom: 40px;
  }
}

/* Theme */
html {
  background-color: #FAF8EA;
  font-family: 'Lato', sans-serif;
  font-weight: 300;
}
header.bk-main,
.bk-toc,
h1 {
  font-family: 'Philosopher', sans-serif;
}
a {
  &:link, &:visited, &:hover, &:active, &:focus {
    color: #252525;
  }
}

header.bk-main {
  background-color: #787863;
  color: #DDDDDF;
  font-weight: 400;
  border: {
    style: solid;
    color: #252526;
    width: 0 1px 1px 1px;
  }
}

.bk-toc {
  font-family: 'Philosopher', sans-serif;
}

